# xylo

./: .gitignore  CMakeLists.txt  Makefile  Package.swift
docs/: Syntax.md
include/: Xylo.hpp  cxylo.h  module.modulemap  xylo.hpp
include/AST/: AST.hpp  Assign.hpp  BOperator.hpp  Block.hpp  Exp.hpp  Float.hpp  For.hpp  Func.hpp  FuncDef.hpp  If.hpp  Int.hpp  Node.hpp  Repeat.hpp  Return.hpp  Root.hpp  Stmt.hpp  String.hpp  Symbol.hpp  Token.hpp  TokenValue.hpp  UOperator.hpp  (+3 more)
src/: CMakeLists.txt  Main.cpp  Xylo.hpp  cxylo.cpp  lexer.cpp  lexer.hpp  main.cpp  native.cpp  native.hpp  parser.cpp  parser.hpp  token.hpp  xylo.cpp  xylo.hpp
src/AST/: Assign.cpp  BOperator.cpp  Block.cpp  CMakeLists.txt  Exp.cpp  Float.cpp  For.cpp  Func.cpp  FuncDef.cpp  If.cpp  Int.cpp  Repeat.cpp  Return.cpp  Root.cpp  Stmt.cpp  String.cpp  UOperator.cpp  Value.cpp  Variable.cpp  While.cpp
src/CodeGen/: CodeGen.cpp
src/Native/: CMakeLists.txt  Native.cpp
src/Parser/: Lexer.cpp  Parser.cpp
src/Token/: Token.cpp
src/VM/: OutCode.cpp  OutVM.cpp  VM.cpp
src/VM/Old/: obj.cpp  vm.cpp
src/ast/: assign.cpp  block.cpp  boperator.cpp  exp.cpp  float.cpp  for.cpp  func.cpp  func_def.cpp  if.cpp  int.cpp  repeat.cpp  return.cpp  root.cpp  stmt.cpp  string.cpp  uoperator.cpp  value.cpp  variable.cpp  while.cpp
src/codegen/: CMakeLists.txt  codegen.cpp
src/native/: native.cpp
src/parser/: CMakeLists.txt  lexer.cpp  parser.cpp
src/token/: CMakeLists.txt  token.cpp
src/vm/: CMakeLists.txt  obj.cpp  out_code.cpp  vm.cpp  vm.hpp
tests/: test.cpp  test.xy  vm_test.cpp
(+47 files in other folders)
